--- a/src/app/page.css
+++ b/src/app/page.css
@@ -139,7 +139,7 @@ body {
 }
 
 /* SOLUÇÔES */
-.solution {
+.about {
   color: #000;
   background-color: #fff;
   width: 100%;
@@ -147,7 +147,7 @@ body {
   margin: auto;
 }
 
-.content-solution {
+.content-about {
   width: 100%;
   max-width: 1100px;
   height: 100%;
@@ -155,20 +155,24 @@ body {
   margin: auto;
 }
 
+.content-about .inforSect {
+  font-size: x-large;
+}
+
 .inforSect {
   text-align: center;
   justify-content: space-around;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   padding: 40px 0;
   font-size: xx-large;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   gap: 30px;
 }
 
-.solution .inforSect::before {
+.about .inforSect::after {
   content: "";
   background-color: var(--corBtn-primary);
   width: 25%;
@@ -180,51 +184,117 @@ body {
   border-radius: 20px;
 }
 
-.solution h2 {
-  font-size: xxx-large;
+.about p {
+  color: var(--cor-textApagado);
+  font-size: larger;
 }
 
-.solution .inforSect .emphasis-text {
+.about h2 {
+  font-size: xx-large;
+}
+
+.about .emphasis-text {
   color: var(--corBtn-primary);
 }
 
-.CardSection {
+.about .destaq-text {
+  color: black;
+  font-weight: bold;
+}
+
+.about-content {
   display: flex;
-  justify-content: center;
-  gap: 90px;
-  margin: 50px;
   align-items: center;
+  gap: 60px;
 }
 
-.CardSection .card-foco-area {
-  width: 45%;
+.about-content .stack-about {
+  width: 90%;
   max-width: 420px;
+  color: white;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+
+  /* APENAS a cor */
+  background: linear-gradient(324deg, #1338f3eb, #000);
 }
 
-.card-foco-area span svg {
+.about-content .stack-about::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='0.06' fill-rule='evenodd'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/svg%3E");
+
+  background-repeat: repeat;
+  background-size: 40px 40px;
+}
+
+.about-content .stack-about .title-stack {
+  padding: 30px 0 7px;
+  text-align: center;
+}
+
+.about-content .stack {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 30px 10px;
+}
+
+.about-content .stack .card-stack {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #8f8f8f73;
+  font-size: larger;
+  padding: 20px 55px;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 150px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.about-content .stack .card-stack svg {
   width: 30px;
   height: 30px;
-  background-color: var(--corBtn-primary);
-  padding: 13px;
   box-sizing: content-box;
-  fill: white;
+  background: #0060d1;
+  padding: 15px 15px;
+  margin: 5px 0;
   border-radius: 10px;
-  margin: 30px 0;
 }
 
-.card-foco-area .svg-area1 svg {
-  background-color: black;
-}
-
-.card-foco-area h3 {
-  font-size: x-large;
-  margin: 10px 0;
-}
-
-.card-foco-area p {
-  color: lab(35.6337% -1.58697 -10.8425);
-  font-size: large;
+.about-content .about-me {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   line-height: 1.5;
+}
+
+.about-me .obs-about {
+  font-size: larger;
+  line-height: 1.5;
+  display: flex;
+  color: var(--cor-textApagado);
+}
+
+.about-me .obs-about:before {
+  content: "";
+  background-color: var(--corBtn-primary);
+  border-radius: 20px;
+  max-width: 120px;
+  width: 15px;
+  margin: 0 10px;
 }
 
 /* SERVIÇOS */
@@ -254,6 +324,7 @@ body {
 
 .section-projects {
   background: white;
+  padding-bottom: 60px;
 }
 
 .projects {
@@ -264,4 +335,77 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: 40px;
+}
+
+/* Escolher */
+
+.choose {
+  background: linear-gradient(157deg, #00000085, #0d0b99b0);
+}
+
+.choose .escolher {
+  height: 60vh;
+}
+
+.choose .infor-section {
+  padding: 70px;
+}
+
+.choose .escolher .infor-section {
+  background-color: transparent;
+  color: white;
+}
+
+.choose .escolher .infor-section p {
+  padding: 20px;
+  color: #d1d0cfcc;
+}
+
+.choose .cardChoose {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  padding: 30px 0;
+}
+
+/* depoimentos */
+
+article {
+  /* display: none; */
+}
+
+article .depoiments {
+  background: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding-bottom: 50px;
+}
+
+/* Orcamento */
+.section-orcament {
+  background-color: white;
+}
+
+.section-orcament .benefit-content {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  max-width: 1100px;
+  justify-content: center;
+  padding: 40px;
+
+  background: linear-gradient(155deg, #2057dd, #001a67);
+  border-radius: 10px;
+  padding: 50px;
+}
+
+footer {
+  text-align: center;
+  color: var(--cor-textApagado);
+  padding: 40px;
+  background-color: white;
 }
