--- a/src/components/CardProject/CardProject.css
+++ b/src/components/CardProject/CardProject.css
@@ -1,5 +1,75 @@
 .project {
-  width: 20%;
-  max-width: 300px;
-  color: black;
+  color: #000;
+  width: 100%;
+
+  max-width: 370px;
+}
+
+.project img {
+  color: transparent;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+  height: 220px;
+}
+
+.project .about {
+  padding: 10px;
+  color: var(--corBtn-hover);
+  font-weight: 700;
+}
+
+.project .infor-project h3 {
+  font-size: larger;
+  padding: 5px 0;
+}
+
+.project .infor-project p {
+  font-size: medium;
+  line-height: 1.2;
+  color: var(--cor-textApagado);
+}
+
+.project .linguagem-project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+}
+.project .linguagem-project span {
+  border-radius: 20px;
+  padding: 6px 20px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.project .linguagem-project span svg {
+  fill: var(--corBtn-hover);
+  width: 25px;
+  height: 25px;
+}
+
+.project .btn-project a button {
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  background-color: var(--corBtn-hover);
+  color: white;
+  font-size: medium;
+  border: 1px solid var(--corBtn-hover);
+  transition: var(--hovers-suave);
+  -webkit-transition: var(--hovers-suave);
+  -moz-transition: var(--hovers-suave);
+  -ms-transition: var(--hovers-suave);
+  -o-transition: var(--hovers-suave);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.project .btn-project a button:hover {
+  background-color: #002d8d;
 }
