--- a/src/components/CardChoose/CardChoose.css
+++ b/src/components/CardChoose/CardChoose.css
@@ -23,3 +23,21 @@
   line-height: 1.5;
   padding-top: 5px;
 }
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .card-escolher {
+    max-width: 100%;
+    padding: 10px;
+
+    width: 180px;
+  }
+
+  .card-escolher h3 {
+    font-size: medium;
+  }
+
+  .card-escolher p {
+    font-size: small;
+  }
+}
